--- a/pom.xml
+++ b/pom.xml
@@ -115,7 +115,18 @@
 	<build>
 		<finalName>maven-web-app</finalName>
 		
-		<plugins>
+<plugins>	
+	<plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-war-plugin</artifactId>
+            <version>3.3.1</version>
+            <configuration>
+                <failOnMissingWebXml>false</failOnMissingWebXml>
+            </configuration>
+        </plugin>
+		
+		
+		
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
