--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,11 @@
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
 		<sonar.host.url>http://172.31.42.81:9000/</sonar.host.url>
-		<sonar.login>kevin</sonar.login>
-		<sonar.password>kevin123</sonar.password>
+		<sonar.login>admin</sonar.login>
+		<sonar.password>admin123</sonar.password>
+ 		<nexus.login>Jeffrey</nexus.login>
+                <nexus.password>Funm!29$$</nexus.password>
+
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
