--- a/pom.xml
+++ b/pom.xml
@@ -23,8 +23,9 @@
 		<log4j.version>1.2.17</log4j.version>
 		<sonar.host.url>http://172.31.42.81:9000/</sonar.host.url>
 		<sonar.login>admin</sonar.login>
-		<sonar.password>admin123</sonar.password>
- 		<nexus.login>Jeffrey</nexus.login>
+		<sonar.password>admin</sonar.password>
+		<nexus.host.url>http://172.31.47.161:8888/</nexus.host.url>
+		<nexus.login>Jeffrey</nexus.login>
                 <nexus.password>Funm!29$$</nexus.password>
 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
