--- a/pom.xml
+++ b/pom.xml
@@ -102,19 +102,19 @@
 		<repository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Releases Nexus Repository</name>
-	      <url> http://52.15.230.253:8888/repository/maven-web-app-release/</url>
+	      <url> http://172.31.47.161:8888/repository/maven-web-application-release/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Snapshot Nexus Repository </name>
-	      <url>http://52.15.230.253:8888/repository/maven-web-app-snapshot/</url>
+	      <url>http://172.31.47.161:8888/repository/maven-web-application-snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
 	
 	<build>
-			<finalName>maven-web-app</finalName> 
+			<finalName>maven-web-application</finalName> 
 		
 		<plugins>
 			<plugin>
