--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>com.mt</groupId>
 	<artifactId>maven-web-application</artifactId>
 	<packaging>war</packaging>
-	<version>1.1.1-SNAPSHOT</version>
+	<version>1.1.1-RELEASE</version>
 	
 	<name>maven-web-application</name>
 
@@ -24,7 +24,7 @@
 		<sonar.host.url>http://172.31.42.81:9000/</sonar.host.url>
 		<sonar.login>admin</sonar.login>
 		<sonar.password>admin</sonar.password>
-		<nexus.host.url>http://18.220.179.61:8888/</nexus.host.url>
+		<nexus.host.url>http://18.220.147.111:8888/</nexus.host.url>
 		<nexus.login>Jeffrey</nexus.login>
                 <nexus.password>Funm!29$$</nexus.password>
 
@@ -102,13 +102,13 @@
 		<repository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Releases Nexus Repository</name>
-	      <url> http://18.220.179.61:8888/repository/maven-web-application-release/</url>
+	      <url> http://18.220.147.111:8888/repository/maven-web-application-release/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Snapshot Nexus Repository </name>
-	      <url>http://18.220.179.61:8888/repository/maven-web-application-snapshot/</url>
+	      <url>http://18.220.147.111:8888/repository/maven-web-application-snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
