--- a/pom.xml
+++ b/pom.xml
@@ -21,12 +21,13 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://172.31.42.81:9000/</sonar.host.url>
-		<sonar.login>admin</sonar.login>
-		<sonar.password>admin</sonar.password>
-		<nexus.host.url>http://172.31.47.161:8888/</nexus.host.url>
-		<nexus.login>Jeffrey</nexus.login>
-                <nexus.password>Funm!29$$</nexus.password>
+		<sonar.host.url>http://172.31.20.74:9000/</sonar.host.url>
+		<sonar.login>Developer</sonar.login>
+		<sonar.password>Funm!29$$</sonar.password>
+		<nexus.host.url>http://3.145.128.150:8081/</nexus.host.url>
+		<nexus.login>Developer</nexus.login>
+	        <nexus.password>Funm!29$$</nexus.password>
+
 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -102,13 +103,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Releases Nexus Repository</name>
-	      <url>http://3.134.96.99:8888/repository/maven-web-application-release/</url>
+	      <url>http://3.145.128.150:8081/repository/maven-web-application-release/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Snapshot Nexus Repository </name>
-	      <url>http://3.134.96.99:8888/repository/maven-web-application-snapshot/</url>
+	      <url>http://3.145.128.150:8081/repository/maven-web-applications-snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
