--- a/pom.xml
+++ b/pom.xml
@@ -21,12 +21,12 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://172.31.21.236:9000/</sonar.host.url>
+		<sonar.host.url>http://172.31.2.176:9000/</sonar.host.url>
 		<sonar.login>admin</sonar.login>
-		<sonar.password>admin123</sonar.password>
-		<nexus.host.url>http://52.15.199.84:8081/</nexus.host.url>
-		<nexus.login>Developer</nexus.login>
-	        <nexus.password>admin</nexus.password>
+		<sonar.password>admin</sonar.password>
+		<nexus.host.url>http://172.31.2.176:8081/</nexus.host.url>
+		<nexus.login>admin</nexus.login>
+	    <nexus.password>admin</nexus.password>
 
 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -103,13 +103,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Releases Nexus Repository</name>
-	      <url>http://52.15.199.84:8081/repository/maven-web-apps-release/</url>
+	      <url>http://172.31.2.176:8081/repository/maven-web-apps-release/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Snapshot Nexus Repository</name>
-	      <url>http://52.15.199.84:8081/repository/maven-web-apps-snapshot/</url>
+	      <url>http://172.31.2.176:8081/repository/maven-web-apps-snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
